fixed text widget spacing on mobile

--- a/assets/css/lsx-rtl.css
+++ b/assets/css/lsx-rtl.css
@@ -422,6 +422,8 @@ figure { max-width: 100%; }
 
 #home-widgets > .widget.widget_lsx_full_width_alt:last-child, #home-widgets > .widget.widget_lsx_full_width:last-child { margin-bottom: 0; }
 
+@media (max-width: 767px) { #home-widgets > .widget.widget_text [class*="col-"] + [class*="col-"] { margin-top: 8.5rem; } }
+
 #home-widgets h3, #home-widgets .widget-title { font-size: 30px; line-height: 1.2; margin-bottom: 4.25rem; margin-top: 0; text-align: center; }
 
 #home-widgets h3:after, #home-widgets .widget-title:after { content: ''; display: block; height: 2px; margin: 2.4rem auto 0; width: 80px; }
